Se agrega compatiblidad con ESP8266

--- a/html/portalWFMiot.html
+++ b/html/portalWFMiot.html
@@ -1013,7 +1013,8 @@
       <!-- HTTP_SCAN_LINK -->
       <br />
       <div class="">
-        <a class="enlace" href=\"/wifi\">Scan </a> </div>
+        <a class="enlace" href=\"/wifi\">Scan </a>
+      </div>
         <!-- /HTTP_SCAN_LINK -->
           <!-- HTTP_SAVED -->
           <h4>Valores guardados</h3>
